--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* Layout */
+
 html {
 	height: 100%;
 }
@@ -7,7 +9,7 @@ body {
 	margin : 0px;
 	padding : 0px;
 	overflow : hidden;
-	margin: 0 auto -50px;
+	margin: 0 auto -20px;
 }
 
 header {
@@ -17,30 +19,31 @@ header {
 	height: 50px;
 	margin: 0px;
 	padding : 0px;
-	background: red;
+	background: #e0e0e0;
+	background-image: url("images/logo.png");
+	background-repeat: no-repeat;
 	overflow : hidden;
 }
 
 #chatWindow {
-	overflow: auto;
+	overflow: scroll;
+	overflow-x: hidden;
     position:absolute;
     top:0;
     bottom:0;
-	width: 100%;
+    width:95%;
 	padding: 15px 15px 0px 15px;
-	margin: 55px 0;
+	margin: 50px 0px 25px 0px;
 }
 
 #chatContents {
-	height: inherit;
-	width: inherit;
+	width: 100%;
 	margin: 0px;
 	font: 16px/26px Georgia, Garamond, Serif;
-	overflow: scroll;
 }
 
 #chatInput, #push {
-	height: 50px;
+	height: 25px;
 }
 
 #chatInput {
@@ -53,9 +56,27 @@ header {
 
 #chatInput input {
 	width: 100%;
-	height: 50px;
-	margin: 0px 0px 0px 0px;
-	padding: 5px;
+	height: 20px;
+	margin: 0px 0px 5px 0px;
 	overflow: scroll;
 	outline:none;
+}
+
+/* Presentation */
+
+.youTag, .strangerTag {
+	display: inline;
+}
+
+.youTag {
+	color: #0674A4; /* Logo's blue color */ 
+}
+
+.strangerTag {
+	color: #8D5431; /* Logo's brown color */ 
+}
+
+.announcement {
+	font-style: italic;
+	color: #707070;
 }
