test for tag upload

--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ header {
 #register_form {
     width: 200px;
     margin: 0 auto;
-    background: red;
+    background: blue;
 }
 
 /* Presentation */
