--- a/style.css
+++ b/style.css
@@ -44,8 +44,7 @@ header {
 }
 
 #nav a:hover {
-	text-decoration: none;
-	font-weight: bold;
+	text-decoration: underline;
 }
 
 #chatWindow {
@@ -186,7 +185,7 @@ header {
 
 #contact a { color: #707070; text-decoration: none; text-align: center;}
 
-#contact a:hover { font-weight: bold; }
+#contact a:hover { text-decoration: underline; }
 
 /* Presentation */
 
