--- a/style.css
+++ b/style.css
@@ -20,7 +20,8 @@ header {
 	height: 50px;
 	margin: 0px;
 	padding : 0px;
-	background: #e0e0e0;
+	/*background: #e0e0e0;*/
+	background-color: rgba(244,122,178,0.2);
 	background-image: url("logo.png");
 	background-repeat: no-repeat;
 	overflow : hidden;
@@ -92,11 +93,25 @@ header {
     margin-left: -150px;
     top: 50%;
     left: 50%;
-    border: 4px solid #e0e0e0;
+    /*border: 4px solid #e0e0e0;*/
     
     -webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
+	background-color: rgba(255,255,255,0.8);
+}
+
+#heart {
+	position: fixed;
+	height: 700px;
+	width: 700px;
+	margin-top: -300px;
+    margin-left: -350px;
+	top: 50%;
+	left: 50%;
+	background-image: url(heart.png);
+	background-size: 700px;
+	background-repeat: no-repeat;
 }
 
 #register_contents {
@@ -269,7 +284,7 @@ header {
 }
 
 .strangerTag {
-	color: #8D5431; /* Logo's brown color */ 
+	color: #573521; /* Logo's brown color */ 
 }
 
 .announcement {
