--- a/style.css
+++ b/style.css
@@ -284,7 +284,7 @@ header {
 }
 
 .strangerTag {
-	color: #573521; /* Logo's brown color */ 
+	color: #8D5431; /* Logo's brown color */ 
 }
 
 .announcement {
