--- a/style.css
+++ b/style.css
@@ -20,8 +20,7 @@ header {
 	height: 50px;
 	margin: 0px;
 	padding : 0px;
-	/*background: #e0e0e0;*/
-	background-color: rgba(244,122,178,0.2);
+	background: #e0e0e0;
 	background-image: url("logo.png");
 	background-repeat: no-repeat;
 	overflow : hidden;
@@ -93,7 +92,7 @@ header {
     margin-left: -150px;
     top: 50%;
     left: 50%;
-    /*border: 4px solid #e0e0e0;*/
+    border: 4px solid #e0e0e0;
     
     -webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
@@ -101,8 +100,9 @@ header {
 	background-color: rgba(255,255,255,0.8);
 }
 
-#heart {
-	position: fixed;
+#image {
+	display: none;
+	/*position: fixed;
 	height: 700px;
 	width: 700px;
 	margin-top: -300px;
@@ -111,7 +111,7 @@ header {
 	left: 50%;
 	background-image: url(heart.png);
 	background-size: 700px;
-	background-repeat: no-repeat;
+	background-repeat: no-repeat;*/
 }
 
 #register_contents {
